--- a/back/Api/Platender.Api/Platender.Api.csproj
+++ b/back/Api/Platender.Api/Platender.Api.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Infrastructure\Platender.Infrastructure\Platender.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
