--- a/back/Infrastructure/Platender.Infrastructure/Platender.Infrastructure.csproj
+++ b/back/Infrastructure/Platender.Infrastructure/Platender.Infrastructure.csproj
@@ -1,10 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Application\Platender.Application\Platender.Application.csproj" />
+  </ItemGroup>
 
 </Project>
