--- a/back/Api/Platender.Api/appsettings.json
+++ b/back/Api/Platender.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "Token": "my super secret token"
+    "Token": "my super secret token < my super secret token < my super secret token < ... (powtórzony odpowiednią liczbę razy)" 
   }
 }
