--- a/back/Api/Platender.Api/appsettings.json
+++ b/back/Api/Platender.Api/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "Token": "my super secret token < my super secret token < my super secret token < ... (powtórzony odpowiednią liczbę razy)" 
+    "Token": "my super secret token < my super secret token < my super secret token < ... (powtórzony odpowiednią liczbę razy)",
+    "Audience": "api.bearer.auth",
+    "Issuer": "api.bearer.auth",
+    "ValidateSigningKey": "true"
   }
 }
